Add demo data sets

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 web-app
 working/bipartitePebble/*
 working/unipartitePebble/*
+working/*.json
 working/i2/*
 test-data-sets/docker/chartFolder/*
+demo-data-sets/working/*
+demo-data-sets/docker/chartFolder/*
