--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "8090:8090"
     volumes:
-      - "${PWD}/test-data-sets/docker/:/data/"
+      - "${PWD}/demo-data-sets/docker/:/data/"
       - unipartitePebbleStore:/pebble/unipartite
       - bipartitePebbleStore:/pebble/bipartite
       - signatureStore:/signatureStore
