Optimise Pebble backend

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 web-app
+experiment
 working/bipartitePebble/*
 working/unipartitePebble/*
 working/*.json
@@ -6,3 +7,4 @@ working/i2/*
 test-data-sets/docker/chartFolder/*
 demo-data-sets/working/*
 demo-data-sets/docker/chartFolder/*
+demo-data-sets/set-1/working/*
